[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.72"

[dependencies]
nix = { version = "0.31", features = ["ioctl", "fs"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
